force-app/main/default/objects/DuplicationSetting__mdt/DuplicationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Unified settings for Duplication Manager application</description>
    <label>Duplication Setting</label>
    <pluralLabel>Duplication Settings</pluralLabel>
</CustomObject>