force-app/main/default/objects/DuplicationSetting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this setting</description>
    <inlineHelpText>Detailed information about this setting</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>