force-app/main/default/objects/DuplicationSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this setting is active</description>
    <inlineHelpText>When false, this setting will be ignored</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>