force-app/main/default/objects/DuplicationSetting__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique identifier for this setting</description>
    <inlineHelpText
  >Unique key to identify this setting programmatically</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>