force-app/main/default/objects/DuplicationSetting__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>API name of the object this setting applies to</description>
    <inlineHelpText>Leave blank for global settings</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>