force-app/main/default/objects/DuplicationSetting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of this setting</description>
    <inlineHelpText>The actual value for this setting</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>